--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.imnobody.photosearch.MainActivity">
+    tools:context="imageserach.fieldwire.amko0l.com.imagesearch.activities.MainActivity">
 
     <ImageView
         android:id="@+id/fullImageid"
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:indeterminateTint="@color/colorPrimary"
         android:visibility="visible" />
 
 </RelativeLayout>
