--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,39 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainbg"
     android:orientation="vertical"
-    tools:context="com.example.imnobody.photosearch.MainActivity">
+    tools:context="imageserach.fieldwire.amko0l.com.imagesearch.activities.MainActivity">
 
-    <GridView
-        android:id="@+id/gridview"
+
+    <FrameLayout
+        android:id="@+id/imageSearchHolder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/common_margin"
-        android:horizontalSpacing="@dimen/grid_spacing"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/grid_spacing" />
-
-    <!-- Empty text view -->
-    <TextView
-        android:id="@+id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="@dimen/common_margin"
-        android:text="@string/no_images"
-        android:textAppearance="?android:textAppearanceMedium" />
-
-    <ProgressBar
-        android:id="@+id/loading_indicator_main_grid"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-
-
+        android:layout_height="wrap_content" />
 </RelativeLayout>
 
 
