--- a/app/src/main/res/layout/grid_image_item.xml
+++ b/app/src/main/res/layout/grid_image_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.imnobody.photosearch.MainActivity">
+    tools:context="imageserach.fieldwire.amko0l.com.imagesearch.activities.MainActivity">
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/grid_item_image"
